--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,18 @@
+<mat-toolbar class="mat-elevation-z8"  *ngIf="isLogin()">
+    <mat-toolbar-row>
+        <button mat-icon-button style="outline: none !important" [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="navigator('account')">My Account</button>
+            <button mat-menu-item (click)="navigator('userlist')" *ngIf="isAdmin()">User List</button>
+            <button mat-menu-item (click)="navigator('userfiles')" *ngIf="isAdmin()">User Files</button>
+            <button mat-menu-item (click)="navigator('settings')" *ngIf="isAdmin()">Settings</button>
+            <button mat-menu-item (click)="navigator('resetpassword')" *ngIf="isAdmin()">Reset Password</button>
+            <button mat-menu-item (click)="navigator('downloadsection')" *ngIf="isAdmin()">Download Section</button>
+            <button mat-menu-item (click)="navigator('certificate')" *ngIf="isAdmin()">Upload Certificates</button>
+        </mat-menu>
+        <span class="fontS">{{userdata.name}}</span>
+        <span class="example-spacer"></span>
+        <button mat-icon-button (click)="logOut()" title="Logout"><mat-icon>power_settings_new</mat-icon></button>
+    </mat-toolbar-row>
+</mat-toolbar>
 <router-outlet></router-outlet>
