Account Page Updated

--- a/src/app/registration-student/registration-student.component.html
+++ b/src/app/registration-student/registration-student.component.html
@@ -110,6 +110,8 @@
                                 <input matInput type="password" placeholder="Password" name="password" (input)="compare()" [(ngModel)]="user.password" required />
                             </mat-form-field>
                         </p>
+                    </div>
+                    <div class="col-sm-6">
                         <p>
                             <mat-form-field appearance="outline" style="width: 100%;">
                                 <mat-label>Re-type New Account Password:</mat-label>
