--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -21,7 +21,7 @@
             </div>
             <br>
             <div class="row fontS">
-                <div class="col-sm-4 text-info"><h5>'Year':</h5></div>
+                <div class="col-sm-4 text-info"><h5>Year:</h5></div>
                 <div class="col-sm-8"><h5> {{userData.year}} </h5></div>
             </div>
             <br>
@@ -44,7 +44,33 @@
             <br>
             <h4 class="text-center text-warning fontS">Event Info</h4>
             <br>
-            <div class="row" *ngFor="let categoryData of categoryDatas; let i=index">
+            <mat-accordion class="example-headers-align" multi>
+            <mat-expansion-panel *ngFor="let categoryData of categoryDatas; let i=index">
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        {{categoryData.category}}
+                    </mat-panel-title>
+                    <mat-panel-description>
+                        {{categoryData.description}}
+                    </mat-panel-description>
+                </mat-expansion-panel-header>
+              
+                <mat-card class="col-sm-4 example-card mat-elevation-z8" style="display: inline-block;" *ngFor="let event of categoryData.events; let i=index">
+                    <mat-card-header>
+                        <mat-card-title><mat-checkbox color="warn" (click)="eventRegistration(categoryData._id,event)"> {{event.name}} @ INR {{event.fees}}/- </mat-checkbox></mat-card-title>
+                        <mat-card-subtitle>{{categoryData.category}}</mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <p> {{event.description}} </p>
+                    </mat-card-content>
+                    <!-- <mat-card-actions>
+                    </mat-card-actions> -->
+                </mat-card>
+
+            </mat-expansion-panel>
+            </mat-accordion>
+              
+            <!-- <div class="row" *ngFor="let categoryData of categoryDatas; let i=index">
                 <br><hr>
                 <div class="col-sm-4">
                     <div class="row fontS">
@@ -74,26 +100,25 @@
                                 <div class="col-sm-4"><h5> {{event.description}} </h5></div>
                                 <div class="col-sm-1"><h5> {{event.fees}} </h5></div>
                                 <div class="col-sm-1">
-                                    <mat-checkbox color="warn" (click)="eventRegistration(categoryData._id,event)">Register</mat-checkbox>
+                                    <mat-checkbox color="warn" (click)="eventRegistration(categoryData._id,event)"> {{event.name}} </mat-checkbox>
                                 </div>
                         </div>
 
                 </div>
-            </div>
+            </div> -->
             
         </div>
     </div>
 </div>
-<hr>
-<br>
-<div class="container">
-    <div class="row">
-        <br>
-            <div class="col-sm-4 text-info"><h5>Total Amount:</h5></div>
-            <div class="col-sm-4"><h5> {{total}} </h5></div>
+<br><br><br><br>
+<!-- <div class="container" style="width: 100% !important;"> -->
+    <div class="row text-center" style="position: fixed; width: 100% !important; bottom: 0; background: #636363; padding: 1% !important;">
+        <div class="col-sm-6"><h5>Total Amount: INR {{total}}/-</h5></div>
+        <div class="col-sm-6">
             <button mat-raised-button color="secondary" (click)="eventPayment()">Register for events</button>
+        </div>
     </div>
-</div>
+<!-- </div> -->
 <div class="loader-holder" *ngIf="loading">
   <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
 </div>
