Payment recept added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,9 +17,9 @@
                      matInput 
                      type="text" 
                      placeholder="Registered Email" 
-                     name="username"
+                     name="email"
                      #contactemail="ngModel"
-                     [(ngModel)]="username"
+                     [(ngModel)]="email"
                      pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
                      required 
                     />
