--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -43,9 +43,9 @@
         <div class="col-sm-12">
             <br>
             <h4 class="text-center text-warning fontS">Event Info</h4>
-            <small class="text-success text-center">The events which are marked "Coupon Applicable" will be eligible for discount when a valid coupon code is applied.</small>
+            <small class="text-success text-center">The events which are marked <mat-icon class="text-success">check_circle</mat-icon> will be eligible for discount when a valid coupon code is applied.</small>
             <br><br>
-            <mat-accordion class="example-headers-align" multi>
+            <mat-accordion class="example-headers-align mat-elevation-z8" multi>
             <mat-expansion-panel *ngFor="let categoryData of categoryDatas; let i=index">
                 <mat-expansion-panel-header>
                     <mat-panel-title>
@@ -58,8 +58,11 @@
               
                 <mat-card class="col-sm-4 example-card mat-elevation-z8" style="display: inline-block;" *ngFor="let event of categoryData.events; let i=index">
                     <mat-card-header>
-                        <mat-card-title><mat-checkbox color="warn" (click)="eventRegistration(categoryData._id,event)"> {{event.name}} @ INR {{event.fees}}/- </mat-checkbox></mat-card-title>
-                        <mat-card-subtitle><mat-chip-list><mat-chip style="background: green;" *ngIf="event.couponApplicable">Coupon Applicable</mat-chip></mat-chip-list></mat-card-subtitle>
+                        <mat-card-title><mat-checkbox color="warn" (click)="eventRegistration(categoryData._id,event)">
+                            <span class="text-primary"> {{event.name}} @ INR {{event.fees}}/- </span>
+                            <mat-icon class="text-success" *ngIf="event.couponApplicable">check_circle</mat-icon>
+                        </mat-checkbox></mat-card-title>
+                        <mat-card-subtitle></mat-card-subtitle>
                     </mat-card-header>
                     <mat-card-content>
                         <p> {{event.description}} </p>
@@ -112,16 +115,16 @@
 <br><br><br><br><br><br>
 <!-- <div class="container" style="width: 100% !important;"> -->
     <div class="row text-center fontS" *ngIf="coupon.couponCode" style="position: fixed; width: 100% !important; bottom: 0; background: #404040; padding: 1% 1% 0% 1% !important;">
-        <div class="col-sm-2"><h5>Total Amount (INR): {{totalO}} + <span *ngIf="temp == 0">{{totalC}}</span><span *ngIf="temp != 0"><s>{{totalC + temp}}</s> {{totalC}} </span> = {{totalC + totalO}}/- </h5></div>
-        <div class="col-sm-3">
+        <div class="col-sm-3"><h5>Total Amount (INR): {{totalO}} + <span *ngIf="temp == 0">{{totalC}}</span><span *ngIf="temp != 0"><s>{{totalC + temp}}</s> {{totalC}} </span> = {{totalC + totalO}}/- </h5></div>
+        <div class="col-sm-2">
             <mat-form-field appearance="legacy" style="width: 100%;" *ngIf="temp == 0">
-                <mat-label>Have a Coupon? Enter the Coupon Code:</mat-label>
+                <mat-label>Enter Coupon Code here</mat-label>
                 <input matInput type="text" placeholder="Coupon Code Please" name="cc" [(ngModel)]="cCode" />
             </mat-form-field>
-            <mat-chip-list *ngIf="temp != 0">Coupon Applied:<mat-chip style="background: green;">{{cCode}}</mat-chip><br><br></mat-chip-list>
+            <mat-chip-list *ngIf="temp != 0">Coupon Applied:<mat-chip style="background: orange; color: black; font-weight: bold;">{{cCode}}</mat-chip><br><br></mat-chip-list>
         </div>
         <div class="col-sm-2">
-            <button mat-raised-button color="accent" (click)="apply()" *ngIf="temp == 0" [disabled]="totalC < coupon.discount || cCode == ''">Apply Coupon</button>
+            <button mat-raised-button color="accent" (click)="apply()" *ngIf="temp == 0" [disabled]="totalC == 0 || cCode == ''">Apply Coupon</button>
             <button mat-raised-button color="warn" (click)="remove()" *ngIf="temp != 0">Remove Coupon</button>
         </div>
         <div class="col-sm-3">
