--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -74,7 +74,7 @@
     <ng-container matColumnDef="k">
         <th mat-header-cell *matHeaderCellDef> Action </th>
         <td mat-cell *matCellDef="let user"> 
-            <button mat-icon-button (click)="deleteUser(user.username)"><mat-icon color="warn">delete</mat-icon></button>
+            <button mat-icon-button (click)="deleteUser(user)"><mat-icon color="warn">delete</mat-icon></button>
         </td>
     </ng-container>
 
