--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -2,34 +2,40 @@
 <h5 class="text-center text-warning fontS">Showing the checked Columns: (Check/Uncheck to show/hide any column)</h5>
 <br>
 <div class="row" style="margin: 0 5%;">
-    <div class="col-md-2"></div>
     <div class="col-md-2">
         <mat-checkbox color="primary" (click)="toggle('b')" [(ngModel)]="show[1]">Name</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="warn" (click)="toggle('d')" [(ngModel)]="show[2]">Email ID</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('c')" [(ngModel)]="show[2]">Email ID</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="primary" (click)="toggle('e')" [(ngModel)]="show[3]">Stream</mat-checkbox>
+        <mat-checkbox color="primary" (click)="toggle('d')" [(ngModel)]="show[3]">Stream</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="warn" (click)="toggle('f')" [(ngModel)]="show[4]">Year</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('e')" [(ngModel)]="show[4]">Year</mat-checkbox>
     </div>
-    <div class="col-md-2"></div>
+    <div class="col-md-2">
+        <mat-checkbox color="warn" (click)="toggle('f')" [(ngModel)]="show[5]">Contact#</mat-checkbox>
+    </div>
+    <div class="col-md-2">
+        <mat-checkbox color="primary" (click)="toggle('g')" [(ngModel)]="show[6]">Institution Name</mat-checkbox>
+    </div>
 </div>
 <div class="row" style="margin: 0 5%;">
-    <div class="col-md-2"></div>
     <div class="col-md-2">
-        <mat-checkbox color="warn" (click)="toggle('g')" [(ngModel)]="show[5]">Contact#</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('h')" [(ngModel)]="show[7]">Registered On</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="primary" (click)="toggle('i')" [(ngModel)]="show[6]">Institution Name</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('i')" [(ngModel)]="show[8]">Payment Receipt</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="warn" (click)="toggle('j')" [(ngModel)]="show[7]">Registered On</mat-checkbox>
+        <mat-checkbox color="primary" (click)="toggle('j')" [(ngModel)]="show[9]">Photo</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="primary" (click)="toggle('k')" [(ngModel)]="show[8]">Action</mat-checkbox>
+        <mat-checkbox color="primary" (click)="toggle('k')" [(ngModel)]="show[10]">Verify User</mat-checkbox>
+    </div>
+    <div class="col-md-2">
+        <mat-checkbox color="primary" (click)="toggle('l')" [(ngModel)]="show[8]">Action</mat-checkbox>
     </div>
     <div class="col-md-2"></div>
 </div>
@@ -45,33 +51,60 @@
     </ng-container>
     <ng-container matColumnDef="b">
         <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let user"> {{user.name}} <mat-chip-list *ngIf="user.admin" style="display: inline-block;"><mat-chip style="background: orange;">Admin</mat-chip></mat-chip-list> </td>
+        <td mat-cell *matCellDef="let user"> 
+            {{user.name}} 
+            <mat-chip-list *ngIf="user.admin" style="display: inline-block;">
+                <mat-chip style="background: orange;">Admin</mat-chip>
+            </mat-chip-list> 
+        </td>
     </ng-container>
-    <ng-container matColumnDef="d">
+    <ng-container matColumnDef="c">
         <th mat-header-cell *matHeaderCellDef> Email ID </th>
         <td mat-cell *matCellDef="let user"> {{user.email}} </td>
     </ng-container>
-    <ng-container matColumnDef="e">
+    <ng-container matColumnDef="d">
         <th mat-header-cell *matHeaderCellDef> Stream </th>
         <td mat-cell *matCellDef="let user"> {{user.stream}} </td>
     </ng-container>
-    <ng-container matColumnDef="f">
+    <ng-container matColumnDef="e">
         <th mat-header-cell *matHeaderCellDef> Year </th>
         <td mat-cell *matCellDef="let user"> {{user.year}} </td>
     </ng-container>
-    <ng-container matColumnDef="g">
+    <ng-container matColumnDef="f">
         <th mat-header-cell *matHeaderCellDef> Contact# </th>
         <td mat-cell *matCellDef="let user"> {{user.contact}} </td>
     </ng-container>
-    <ng-container matColumnDef="i">
+    <ng-container matColumnDef="g">
         <th mat-header-cell *matHeaderCellDef> Institution Name </th>
         <td mat-cell *matCellDef="let user"> {{user.instituteName}} </td>
     </ng-container>
-    <ng-container matColumnDef="j">
+    <ng-container matColumnDef="h">
         <th mat-header-cell *matHeaderCellDef> Registered On </th>
         <td mat-cell *matCellDef="let user"> {{user.createdAt}} </td>
     </ng-container>
+    <ng-container matColumnDef="i">
+        <th mat-header-cell *matHeaderCellDef> Payment Receipt </th>
+        <td mat-cell *matCellDef="let user"> 
+            <a [href]="url+user._id+'/receipt.'+user.receipt">Download Receipt</a>
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="j">
+        <th mat-header-cell *matHeaderCellDef> Photo </th>
+        <td mat-cell *matCellDef="let user"> 
+            <a [href]="url+user._id+'/photo.'+user.photo">Download Photo</a>
+        </td>
+    </ng-container>
     <ng-container matColumnDef="k">
+        <th mat-header-cell *matHeaderCellDef> Verify User </th>
+        <td mat-cell *matCellDef="let user"> 
+            <button mat-icon-button
+             (click)="verifyUser(user)"
+             *ngIf = "!user.verified"
+            ><mat-icon color="accent">check_circle</mat-icon></button>
+            <mat-icon class="text-success" *ngIf="user.verified">verified_user</mat-icon>
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="l">
         <th mat-header-cell *matHeaderCellDef> Action </th>
         <td mat-cell *matCellDef="let user"> 
             <button mat-icon-button (click)="deleteUser(user)"><mat-icon color="warn">delete</mat-icon></button>
