--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -35,7 +35,7 @@
         <mat-checkbox color="primary" (click)="toggle('k')" [(ngModel)]="show[10]">Verify User</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="primary" (click)="toggle('l')" [(ngModel)]="show[8]">Action</mat-checkbox>
+        <mat-checkbox color="primary" (click)="toggle('l')" [(ngModel)]="show[11]">Action</mat-checkbox>
     </div>
     <div class="col-md-2"></div>
 </div>
@@ -85,7 +85,8 @@
     <ng-container matColumnDef="i">
         <th mat-header-cell *matHeaderCellDef> Payment Receipt </th>
         <td mat-cell *matCellDef="let user"> 
-            <a [href]="url+user._id+'/receipt.'+user.receipt">Download Receipt</a>
+            <a *ngIf="user.receipt != ''" [href]="url+user._id+'/receipt.'+user.receipt">Download Receipt</a>
+            <div class="fontS" *ngIf="user.receipt==''">Event not registered</div>
         </td>
     </ng-container>
     <ng-container matColumnDef="j">
